Update funding links

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,2 @@
-github: [gideontong]
-patreon: gideontong
+github: gideontong
 ko_fi: gideontong
-liberapay: gideontong
-custom: wishlist.gideontong.com
